--- a/app/src/main/res/layout/activity_editkindnessentry.xml
+++ b/app/src/main/res/layout/activity_editkindnessentry.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +10,46 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
+    <com.hedgehogproductions.therapyguide.ProgressiveViewPager
+        android:id="@+id/editkindnessentry_pager"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/editkindnessentry_back_button"/>
 
-        <FrameLayout
-            android:id="@+id/contentFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+    <Button
+        android:id="@+id/editkindnessentry_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_back_button_text"/>
 
-    </android.support.design.widget.CoordinatorLayout>
+    <Button
+        android:id="@+id/editkindnessentry_cancel_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/editkindnessentry_back_button"
+        android:layout_toRightOf="@id/editkindnessentry_back_button"
+        android:layout_toStartOf="@id/editkindnessentry_next_button"
+        android:layout_toLeftOf="@id/editkindnessentry_next_button"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_cancel_button_text"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/editkindnessentry_next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_next_button_text"/>
+
+</RelativeLayout>
