--- a/app/src/main/res/layout/fragment_editkindnessentry.xml
+++ b/app/src/main/res/layout/fragment_editkindnessentry.xml
@@ -1,75 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <com.hedgehogproductions.therapyguide.ProgressiveViewPager
+        android:id="@+id/editkindnessentry_pager"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/editkindnessentry_back_button"/>
 
-        <TextView android:id="@+id/editkindnessentry_words_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/kindness_create_words_message" />
+    <Button
+        android:id="@+id/editkindnessentry_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_back_button_text"/>
 
-        <Spinner
-            android:id="@+id/editkindnessentry_words_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/editkindnessentry_cancel_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/editkindnessentry_back_button"
+        android:layout_toRightOf="@id/editkindnessentry_back_button"
+        android:layout_toStartOf="@id/editkindnessentry_next_button"
+        android:layout_toLeftOf="@id/editkindnessentry_next_button"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_cancel_button_text"/>
 
-        <TextView android:id="@+id/editkindnessentry_thoughts_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/kindness_create_thoughts_message" />
+    <Button
+        android:id="@+id/editkindnessentry_next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@null"
+        android:textColor="@android:color/black"
+        android:text="@string/kindness_next_button_text"/>
 
-        <Spinner
-            android:id="@+id/editkindnessentry_thoughts_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView android:id="@+id/editkindnessentry_actions_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/kindness_create_actions_message" />
-
-        <Spinner
-            android:id="@+id/editkindnessentry_actions_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView android:id="@+id/editkindnessentry_self_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/kindness_create_self_message" />
-
-        <Spinner
-            android:id="@+id/editkindnessentry_self_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            style="?android:attr/buttonBarStyle"            >
-            <Button android:id="@+id/editkindnessentry_cancel_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/buttonBarButtonStyle"
-                android:text="@string/entry_cancel_button" />
-            <Button android:id="@+id/editkindnessentry_save_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/buttonBarButtonStyle"
-                android:text="@string/entry_save_button" />
-            <Button android:id="@+id/editkindnessentry_delete_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/buttonBarButtonStyle"
-                android:text="@string/entry_delete_button" />
-        </LinearLayout>
-
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
